<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmConfig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_oto"
    tools:context=".ConfigActivity">

    <TextView
        android:id="@+id/txtCashZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/app_title_oto_cashz"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgCashZ"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCashZ"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_oma_steer" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="430dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCashZ"
        app:layout_constraintVertical_bias="0.076">

        <TextView
            android:id="@+id/txtReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/reader_connection_status"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtReaderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/waiting"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPrinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/printer_connection_status"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtPrinterStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/waiting"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btCheckReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="doCheckReader"
            android:text="@string/bt_check_reader" />

        <Button
            android:id="@+id/btCheckPrinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="doCheckPrinter"
            android:text="@string/bt_check_printer" />

        <Button
            android:id="@+id/btTestPrinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="doTestPrinter"
            android:text="@string/bt_test_printer" />

        <Button
            android:id="@+id/btPaymentHist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="doPaymentHist"
            android:text="@string/bt_test_printer" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>